<?xml version="1.0"?>
<package format="3">
  <name>omni_base_maps</name>
  <version>2.0.7</version>
  <description>omni_base-specific maps and launch files.</description>
  <author email="yue.erro@pal-robotics.com">Yue Erro</author>
  <author email="andrea.capodacqua@pal-robotics.com">Andrea Capodacqua</author>
  <maintainer email="yue.erro@pal-robotics.com">Yue Erro</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
