<?xml version="1.0"?>
<package format="3">
  <name>omni_base_navigation</name>
  <version>2.18.0</version>
  <description>The omni_base Navigatgion metapackage</description>
  <author email="antonio.brandi@pal-robotics.com">Antonio Brandi</author>
  <author email="andrea.capodacqua@pal-robotics.com">Andrea Capodacqua</author>
  <maintainer email="antonio.brandi@pal-robotics.com">Antonio Brandi</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>omni_base_laser_sensors</exec_depend>
  <exec_depend>omni_base_2dnav</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
