cmake_minimum_required(VERSION 3.8)
project(omni_base_2dnav)

find_package(ament_cmake_auto REQUIRED)

# PAL Robotics stricter build flags, other developers should not worry about
# this
find_package(ament_cmake_pal QUIET)

ament_auto_find_build_dependencies()

if(pal_module_cmake_FOUND)
  pal_register_modules(module/10_localization.yaml
                      module/10_localization_w_composition.yaml
                      module/10_navigation.yaml
                      module/10_navigation_w_composition.yaml
                      module/10_slam.yaml)
endif()

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

ament_auto_package(INSTALL_TO_SHARE config launch params)
