<?xml version="1.0"?>
<package format="3">
  <name>omni_base_2dnav</name>
  <version>2.0.7</version>
  <description>omni_base-specific launch files needed to run
    navigation on the omni_base robot.</description>
  <author email="yue.erro@pal-robotics.com">Yue Erro</author>
  <author email="andrea.capodacqua@pal-robotics.com">Andrea Capodacqua</author>
  <maintainer email="yue.erro@pal-robotics.com">Yue Erro</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend condition="$PAL_DISTRO >= alum">pal_module_cmake</build_depend>

  <exec_depend>omni_base_laser_sensors</exec_depend>
  <exec_depend>omni_base_maps</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend condition="$PAL_DISTRO >= alum">pal_nav2_bringup</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
