<?xml version="1.0"?>
<package format="3">
  <name>omni_base_laser_sensors</name>
  <version>2.0.7</version>
  <description>omni_base-specific laser sensors launch and config files.</description>
  <author email="yue.erro@pal-robotics.com">Yue Erro</author>
  <author email="andrea.capodacqua@pal-robotics.com">Andrea Capodacqua</author>
  <maintainer email="yue.erro@pal-robotics.com">Yue Erro</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend condition="$PAL_DISTRO >= alum">pal_module_cmake</build_depend>

  <exec_depend condition="$PAL_DISTRO >= alum">sick_tim</exec_depend>
  <exec_depend condition="$PAL_DISTRO >= alum">pal_laser_filters</exec_depend>
  <exec_depend condition="$PAL_DISTRO >= alum">ira_laser_tools</exec_depend>
  <exec_depend condition="$PAL_DISTRO >= alum">dlo_ros</exec_depend>
  <exec_depend condition="$PAL_DISTRO >= alum">pal_nav2_bringup</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
