<?xml version="1.0"?>
<package format="3">
  <name>omni_base_laser_sensors</name>
  <version>2.18.0</version>
  <description>omni_base-specific laser sensors launch and config files.</description>
  <author email="antonio.brandi@pal-robotics.com">Antonio Brandi</author>
  <author email="andrea.capodacqua@pal-robotics.com">Andrea Capodacqua</author>
  <maintainer email="antonio.brandi@pal-robotics.com">Antonio Brandi</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend condition="$PAL_DISTRO >= alum">pal_module_cmake</build_depend>
  <build_depend condition="$PAL_DISTRO >= alum">pal_configuration_cmake</build_depend>

  <exec_depend condition="$PAL_DISTRO >= alum">dlo_ros</exec_depend>
  <exec_depend condition="$PAL_DISTRO >= alum">ira_laser_tools</exec_depend>
  <exec_depend condition="$PAL_DISTRO >= alum">nav2_lifecycle_manager</exec_depend>
  <exec_depend condition="$PAL_DISTRO >= alum">pal_laser_filters</exec_depend>
  <exec_depend condition="$PAL_DISTRO >= alum">rclcpp_components</exec_depend>
  <exec_depend condition="$PAL_DISTRO >= alum">sick_laser_cfg</exec_depend>
  <exec_depend condition="$PAL_DISTRO >= alum">hokuyo_laser_cfg</exec_depend>
  <exec_depend condition="$PAL_DISTRO >= alum">sick_tim</exec_depend>
  <exec_depend condition="$PAL_DISTRO >= alum">urg_node</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
